fix: Overlap of the elements

--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -134,13 +134,15 @@
 }
 
 .closed {
-	overflow: hidden;
-	max-height: 0;
-	padding: 0;
+	pointer-events: none;
 }
 
 .opened {
-	max-height: auto;
+	pointer-events: auto;
+}
+
+.reviews {
+	overflow: hidden;
 	padding: 30px;
 }
 
